Fix css layout issue & JS localization function within submit obsversation view

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -77,8 +77,12 @@ li {
   background: #ff6347; }
 
 .main-nav li.active a {
-  opacity: 1;
-  color: #fff; }
+  text-decoration: underline; }
+  @media (min-width: 768px) {
+    .main-nav li.active a {
+      text-decoration: none;
+      opacity: 1;
+      color: #fff; } }
 
 .connect a {
   padding: 5px 10px; }
